linux-tools (3.16.7-ckt20-1~bpo70+1) UNRELEASED; urgency=low

  * Rebuild for wheezy
    - Replace build-dependency on libunwind8-dev with libunwind7-dev
    - perf: Work-around Perl bool definition conflict
    - hyperv-daemons: Add symlinks to ensure new kernel headers are used
    - hyperv-daemons: Remove use of dh-systemd

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 24 Jan 2016 16:01:28 +0000

linux-tools (3.16.7-ckt20-1) jessie; urgency=medium

  * New upstream stable update
    - perf session: Do not fail on processing out of order event
    - tools lib traceevent kbuffer: Remove extra update to data pointer in
      PADDING
    - kconfig: Fix warning "‘jump’ may be used uninitialized"
    - scripts/sortextable: suppress warning: `relocs_size' may be used
      uninitialized
    - perf symbols: Store if there is a filter in place
    - perf hists browser: Take the --comm, --dsos, etc filters into account
    - perf hists: Update the column width for the "srcline" sort key
    - perf stat: Get correct cpu id for print_aggr
    - perf header: Fixup reading of HEADER_NRCPUS feature
    - tools lib traceevent: Fix string handling in heterogeneous arch
      environments
    - perf tools: Fix copying of /proc/kcore

  [ Ben Hutchings ]
  * [x86] Add hyperv-daemons package, thanks to Hideki Yamane (closes: #782761)
    - Apply upstream bug fixes up to Linux 4.1 inclusive
  * Adjust for migration to git:
    - Update .gitignore files
    - debian/control: Update Vcs-* fields
    - debian/rules: Exclude .git from maintainerclean rule
  * debian/lib/python/debian_linux/debian.py: Change package version regexp
    to match linux package

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 22 Nov 2015 19:28:02 +0000

linux-tools (3.16-3) unstable; urgency=medium

  * linux-tools: Fix build configuration to avoid linking perf with libbfd
    (Closes: #763002)
  * linux-tools: Add a check that perf is not linked with libbfd