@@ -1,1 +1,2 @@
 /hv_*_daemon
+/check-hyperv
