@@ -95,9 +95,19 @@ install-hyperv-daemons: $(STAMPS_DIR)/build
 	dh_clean -k -d
 	$(MAKE) -C $(BUILD_DIR)/tools/hv install top_srcdir=$(CURDIR) DESTDIR=$(DIR)
 	dh_install
+	for service in fcopy kvp vss; do \
+		install -D -m755 debian/hyperv-daemons.hv-$$service-daemon.init \
+			$(DIR)/etc/init.d/hyperv-daemons.hv-$$service-daemon \
+			|| break; \
+	done
 	dh_installchangelogs
 	dh_installdocs
 #	dh_systemd_enable
+	for service in fcopy kvp vss; do \
+		dh_installinit --name hyperv-daemons.hv-$$service-daemon \
+			--onlyscripts \
+			|| break; \
+	done
 #	dh_systemd_start
 	dh_lintian
 	dh_strip
